[gd_scene load_steps=3 format=2]

[ext_resource path="res://material_maker/nodes/comment.gd" type="Script" id=1]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.0627451 )

[node name="GraphNode" type="GraphNode"]
margin_left = 1.0
margin_top = 1.0
margin_right = 250.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
title = "Comment"
show_close = true
resizable = true
comment = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 233.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="VBox"]
margin_right = 217.0
margin_bottom = 14.0
mouse_filter = 0
text = "Double-click to write a comment"
autowrap = true

[node name="TextEdit" type="TextEdit" parent="VBox"]
visible = false
margin_top = 18.0
margin_right = 221.0
margin_bottom = 18.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
wrap_enabled = true
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="gui_input" from="VBox/Label" to="." method="_on_Label_gui_input"]
[connection signal="focus_exited" from="VBox/TextEdit" to="." method="_on_TextEdit_focus_exited"]
